@@ -4,6 +4,9 @@ pylibftdi changes
 0.13pre
 ~~~~~~~
 
+* Don't error out on failure during string retrieval part of device
+  enumeration (list_devices) on failure to read product manufacturer,
+  description or serial number (bitbucket issue #10)
 * USB_PID_LIST now defaults to 0x6001, 0x6010, 0x6011, 0x6014. The new
   entries are 0x6010 and 0x6011. Note that USB_PID has been removed, and
   USB_VID has been replaced with FTDI_VENDOR_ID
